<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingVertical="15dp">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".33"
                android:text="@string/my"
                android:checked="true"
                android:textSize="20sp"
                android:id="@+id/my_scores_button">
            </RadioButton>
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".33"
                android:text="@string/top_10"
                android:textSize="20sp"
                android:id="@+id/top_ten_button">
            </RadioButton>
            <RadioButton
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight=".33"
                android:text="@string/top_100"
                android:textSize="20sp"
                android:id="@+id/top_hundred_button">
            </RadioButton>
        </RadioGroup>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:orientation="vertical"
            android:id="@+id/my_scores_layout">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/my_scores"
                android:textSize="50sp">
            </TextView>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:id="@+id/my_scores">
            </TableLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:orientation="vertical"
            android:id="@+id/top_ten_layout"
            android:visibility="gone"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/top_ten"
                android:textSize="50sp">
            </TextView>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:id="@+id/top_ten">
            </TableLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:orientation="vertical"
            android:id="@+id/top_hundred_layout"
            android:visibility="gone"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/top_hundred"
                android:textSize="50sp">
            </TextView>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:id="@+id/top_hundred">
            </TableLayout>
        </LinearLayout>
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>