<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/result">


    <EditText
            android:id="@+id/editTextTextEmailAddress3"
            android:layout_width="match_parent"
            android:inputType="textEmailAddress"
            android:layout_height="50dp"
            android:layout_marginTop="200dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/email"
        />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        android:hint="@string/password"
        />
        <LinearLayout
            android:layout_height="50dp"
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="10dp"
            >
            <Button
                android:layout_weight=".5"
                android:layout_height="match_parent"
                android:layout_width="fill_parent"
                android:text="@string/login"
                android:id="@+id/login_button">
            </Button>
            <Button
                android:layout_weight=".5"
                android:layout_height="match_parent"
                android:layout_width="fill_parent"
                android:text="@string/registration"
                android:id="@+id/registration_button">
            </Button>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>